# sed2-demo

./: .gitignore  README.md  pyproject.toml
biocompose/: __init__.py
biocompose/processes/: comparison_processes.py  copasi_process.py  tellurium_process.py
sed2/: __init__.py
sed2/documents/: copasi_tellurium_comparison.json
sed2/experiments/: copasi_tellurium_comparison.py
sed2/processes/: __init__.py  comparison_processes.py  copasi.py  copasi_process.py  helper_processes.py  tellurium.py  tellurium_process.py
