[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sed2-demo"
version = "0.0.1"
description = "Implementing sed2 in terms of process-bigraph"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "bigraph-schema",
    "process-bigraph",
    "matplotlib",
    "bigraph-viz",
    "copasi-basico",
    "tellurium",
    "rest-process",
    "pytest"
]

# Optional/dev dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "build",
]

# Make sure all subpackages are included
[tool.setuptools.packages.find]
where = ["."]
include = ["sed2-demo*"]
exclude = ["tests*", "docs*"]

# If you want console entry points later, uncomment and edit:
# [project.scripts]
# spatio-flux = "spatio_flux.cli:main"

# uv local editable sources
[tool.uv.sources]
bigraph-schema = { path = "../bigraph-schema", editable = true }
process-bigraph = { path = "../process-bigraph", editable = true }
rest-process = { path = "../rest-process", editable = true }
# bigraph-viz = { path = "../bigraph-viz", editable = true }
